# docs/swagger.json
@@ -16,6 +16,308 @@
     "host": "localhost:13172",
     "basePath": "/",
     "paths": {
+        "/v1/address": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "新增地址",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "语言",
+                        "name": "x-language",
+                        "in": "header"
+                    },
+                    {
+                        "description": "CreateAddress",
+                        "name": "{}",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.Address"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpOk"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/carts": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "查询购物车",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "语言",
+                        "name": "x-language",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpOk"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "添加购物车",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "语言",
+                        "name": "x-language",
+                        "in": "header"
+                    },
+                    {
+                        "description": "CreateCart",
+                        "name": "{}",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.Cart"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpOk"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/carts/{pathId}": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "更新购物车",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "语言",
+                        "name": "x-language",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpOk"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "删除购物车",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "语言",
+                        "name": "x-language",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpOk"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/credit": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "新增卡片",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "语言",
+                        "name": "x-language",
+                        "in": "header"
+                    },
+                    {
+                        "description": "CreateCreditCard",
+                        "name": "{}",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/api.CreditCard"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpOk"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/route.httpError"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/images": {
             "post": {
                 "produces": [
@@ -265,6 +567,138 @@
         }
     },
     "definitions": {
+        "api.Address": {
+            "type": "object",
+            "properties": {
+                "city": {
+                    "description": "城市",
+                    "type": "string"
+                },
+                "country": {
+                    "description": "国家",
+                    "type": "string"
+                },
+                "createTime": {
+                    "type": "integer"
+                },
+                "deleteTime": {
+                    "type": "integer"
+                },
+                "fullName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isDefault": {
+                    "type": "boolean"
+                },
+                "line1": {
+                    "description": "Line 1",
+                    "type": "string"
+                },
+                "line2": {
+                    "description": "Line 2",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "收货人电话",
+                    "type": "string"
+                },
+                "province": {
+                    "description": "省",
+                    "type": "string"
+                },
+                "updateTime": {
+                    "type": "integer"
+                },
+                "zipCode": {
+                    "description": "邮编",
+                    "type": "string"
+                }
+            }
+        },
+        "api.Cart": {
+            "type": "object",
+            "properties": {
+                "colorId": {
+                    "type": "string"
+                },
+                "colorName": {
+                    "type": "object",
+                    "$ref": "#/definitions/api.Languages"
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "createTime": {
+                    "type": "integer"
+                },
+                "deleteTime": {
+                    "type": "integer"
+                },
+                "frontImage": {
+                    "type": "string"
+                },
+                "goodsId": {
+                    "type": "string"
+                },
+                "goodsName": {
+                    "type": "object",
+                    "$ref": "#/definitions/api.Languages"
+                },
+                "goodsPrice": {
+                    "type": "number"
+                },
+                "goodsStatus": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "sizeId": {
+                    "type": "string"
+                },
+                "sizeValue": {
+                    "type": "string"
+                },
+                "updateTime": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.CreditCard": {
+            "type": "object",
+            "properties": {
+                "bin": {
+                    "type": "string"
+                },
+                "createTime": {
+                    "type": "integer"
+                },
+                "cvv": {
+                    "type": "string"
+                },
+                "deleteTime": {
+                    "type": "integer"
+                },
+                "expire": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isDefault": {
+                    "type": "boolean"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "updateTime": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.Image": {
             "type": "object",
             "properties": {
@@ -291,6 +725,17 @@
                 }
             }
         },
+        "api.Languages": {
+            "type": "object",
+            "properties": {
+                "chinese": {
+                    "type": "string"
+                },
+                "english": {
+                    "type": "string"
+                }
+            }
+        },
         "api.Register": {
             "type": "object",
             "properties": {
@@ -302,18 +747,18 @@
                     "description": "sha1(password)",
                     "type": "string"
                 },
+                "sign": {
+                    "description": "签名",
+                    "type": "string"
+                },
                 "timestamp": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "token": {
                     "type": "string"
                 },
                 "username": {
                     "description": "email",
-                    "type": "string"
-                },
-                "verified": {
-                    "description": "邮件验证码",
                     "type": "string"
                 }
             }
