# route/user.go
@@ -321,3 +321,43 @@ func (s *Service) CreateAddress(ctx *https.Context) {
 	}
 	ctx.JSON(http.StatusOK, s.newHttpOk())
 }
+
+//@Summary 新增卡片
+//@Produce json
+//@Param x-language header string false "语言" default "chinese"
+//@Param {} body api.CreditCard true "CreateCreditCard"
+//@Success 200 {object} route.httpOk
+//@Failure 400 {object} route.httpError
+//@Failure 404 {object} route.httpError
+//@Failure 500 {object} route.httpError
+//@Router /v1/credit [post]
+func (s *Service) CreateCreditCard(ctx *https.Context) {
+	//验证请求
+	sid, err := s.sid(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusForbidden, s.newHttpError(SessionCode, SessionMsg, QueryErrorCode, err.Error()))
+		return
+	}
+	body, err := s.body(ctx)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, s.newHttpError(UserCode, UserMsg, BodyErrorCode, BodyErrorMsg))
+		return
+	}
+	param := api.CreditCard{}
+	err = json.Unmarshal(body, &param)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, s.newHttpError(UserCode, UserMsg, ContextErrorCode, ContextErrorMsg))
+		return
+	}
+	user, err := s.sessionService.QueryUserSession(sid)
+	if err != nil {
+		ctx.JSON(http.StatusForbidden, s.newHttpError(SessionCode, SessionMsg, QueryErrorCode, err.Error()))
+		return
+	}
+	err = s.userService.CreateCreditCard(user, &param)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, s.newHttpError(AddressCode, AddressMsg, CreateErrorCode, err.Error()))
+		return
+	}
+	ctx.JSON(http.StatusOK, s.newHttpOk())
+}
